--- a/Apstars/Apstars.csproj
+++ b/Apstars/Apstars.csproj
@@ -30,12 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=4.1.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.4.1.0\lib\net45\Autofac.dll</HintPath>
+    <Reference Include="Castle.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.3.2.2\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
@@ -65,14 +66,67 @@
     <Compile Include="Application\Dto\PagedResultRequestInput.cs" />
     <Compile Include="Application\NameValue.cs" />
     <Compile Include="Application\Pagination.cs" />
+    <Compile Include="Bootstrapper\App.cs" />
+    <Compile Include="Bootstrapper\AppInitEventArgs.cs" />
+    <Compile Include="Bootstrapper\AppRuntime.cs" />
+    <Compile Include="Bootstrapper\IApp.cs" />
+    <Compile Include="ApstarsException.cs" />
+    <Compile Include="Config\AppConfigSource.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Config\ApstarsConfiguration1.csd.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ApstarsConfiguration.csd</DependentUpon>
+    </Compile>
+    <Compile Include="Config\ApworksConfiguration.Partial.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Config\ConfigException.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Config\Fluent\ApplicationConfigurator.cs" />
+    <Compile Include="Config\Fluent\ApstarsConfigurator.cs" />
+    <Compile Include="Config\Fluent\ConfigSourceConfigurator.cs" />
+    <Compile Include="Config\Fluent\Configurator.cs" />
+    <Compile Include="Config\Fluent\ExceptionHandlerConfigurator.cs" />
+    <Compile Include="Config\Fluent\Extensions.cs" />
+    <Compile Include="Config\Fluent\HandlerConfigurator.cs" />
+    <Compile Include="Config\Fluent\IdentityGeneratorConfigurator.cs" />
+    <Compile Include="Config\Fluent\InterceptionConfigurator.cs" />
+    <Compile Include="Config\Fluent\ObjectContainerConfigurator.cs" />
+    <Compile Include="Config\Fluent\SequenceGeneratorConfigurator.cs" />
+    <Compile Include="Config\Fluent\TypeSpecifiedConfigSourceConfigurator.cs" />
+    <Compile Include="Config\IConfigSource.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Config\RegularConfigSource.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="DisposableObject.cs" />
+    <Compile Include="Exceptions\ExceptionHandler.cs" />
+    <Compile Include="Exceptions\ExceptionManager.cs" />
+    <Compile Include="Exceptions\IExceptionHandler.cs" />
+    <Compile Include="Generators\IdentityGenerator.cs" />
+    <Compile Include="Generators\IIdentityGenerator.cs" />
+    <Compile Include="Generators\ISequenceGenerator.cs" />
+    <Compile Include="Generators\SequenceGenerator.cs" />
+    <Compile Include="Generators\SequentialIdentityGenerator.cs" />
     <Compile Include="IAggregateRoot.cs" />
     <Compile Include="IDependency.cs" />
     <Compile Include="IEntity.cs" />
+    <Compile Include="InfrastructureException.cs" />
+    <Compile Include="Interception\AdditionalInterfaceToProxyAttribute.cs" />
+    <Compile Include="Interception\BaseTypeForInterfaceProxyAttribute.cs" />
+    <Compile Include="Interception\ExceptionHandlingInterceptor.cs" />
+    <Compile Include="Interception\InterceptorSelector.cs" />
+    <Compile Include="IObjectContainer.cs" />
     <Compile Include="IServiceLocator.cs" />
     <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="ObjectContainer.cs" />
     <Compile Include="PagedResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\IRepositoryContext.cs" />
     <Compile Include="Repositories\Repository.cs" />
@@ -103,7 +157,28 @@
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Config\ApstarsConfiguration.csd">
+      <Generator>CsdFileGenerator</Generator>
+      <LastGenOutput>ApstarsConfiguration1.csd.cs</LastGenOutput>
+    </None>
+    <None Include="Config\ApstarsConfiguration.csd.config">
+      <DependentUpon>ApstarsConfiguration.csd</DependentUpon>
+    </None>
+    <None Include="Config\ApstarsConfiguration.csd.diagram">
+      <DependentUpon>ApstarsConfiguration.csd</DependentUpon>
+    </None>
+    <None Include="Config\ApstarsConfiguration.csd.xsd">
+      <DependentUpon>ApstarsConfiguration.csd</DependentUpon>
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
