--- a/Apstars/Apstars.csproj
+++ b/Apstars/Apstars.csproj
@@ -47,8 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Application\AutoMapping\IAutoMapper.cs" />
-    <Compile Include="Application\AutoMapping\IAutoMapperProfile.cs" />
+    <Compile Include="Application\ObjectMapping\IObjectMapper.cs" />
+    <Compile Include="Application\ObjectMapping\IObjectMapperProfile.cs" />
     <Compile Include="Application\Dto\EntityDto.cs" />
     <Compile Include="Application\Dto\IdInput.cs" />
     <Compile Include="Application\Dto\IEntityDto.cs" />
@@ -66,7 +66,7 @@
     <Compile Include="Application\Dto\PagedResultDto.cs" />
     <Compile Include="Application\Dto\PagedResultRequestInput.cs" />
     <Compile Include="Application\NameValue.cs" />
-    <Compile Include="Application\Pagination.cs" />
+    <Compile Include="Querying\Pagination.cs" />
     <Compile Include="Bootstrapper\App.cs" />
     <Compile Include="Bootstrapper\AppInitEventArgs.cs" />
     <Compile Include="Bootstrapper\AppRuntime.cs" />
@@ -150,6 +150,7 @@
     <Compile Include="PagedResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs" />
+    <Compile Include="Querying\SortSpecification.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\IRepositoryContext.cs" />
     <Compile Include="Repositories\Repository.cs" />
@@ -177,7 +178,7 @@
     <Compile Include="Specifications\OrSpecification.cs" />
     <Compile Include="Specifications\ParameterRebinder.cs" />
     <Compile Include="Specifications\Specification.cs" />
-    <Compile Include="Storage\SortOrder.cs" />
+    <Compile Include="Querying\SortOrder.cs" />
     <Compile Include="Transactions\DistributedTransactionCoordinator.cs" />
     <Compile Include="Transactions\ITransactionCoordinator.cs" />
     <Compile Include="Transactions\SuppressedTransactionCoordinator.cs" />
